--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c0cb54
+	base = f0e927c
 	trimbase = 
 	parent = release/kinetic/class_loader
-	previous = 
+	previous = 2c0cb54
