--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b6bebfd
+	base = eb20a0b
 	trimbase = 
 	parent = arch/kinetic/class_loader
-	previous = 
+	previous = b6bebfd
