--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 12eaaf7
+	base = 047bd82
 	trimbase = 
 	parent = release/lunar/class_loader
-	previous = 
+	previous = 12eaaf7
