--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ad6923
+	base = 53edee3
 	trimbase = 
 	parent = arch/lunar/class_loader
-	previous = 
+	previous = 3ad6923
