--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d9886bb
+	base = 0e630f6
 	trimbase = 
 	parent = release/melodic/class_loader
-	previous = 
+	previous = d9886bb
