--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1dd744a
+	base = fb29c66
 	trimbase = 
 	parent = arch/melodic/class_loader
-	previous = 
+	previous = 1dd744a
